--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
-primaryColor = "#E37026"
-backgroundColor = "#ddddddf6"
-secondaryBackgroundColor = "#fafafaff"
-textColor = "#000000ff"
-font = "sans serif"
+primaryColor="#E37026"     
+backgroundColor="#FFFFFF"  
+secondaryBackgroundColor="#F0F2F6" 
+textColor="#31333F"         
+font="sans serif"
