--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#E37026"     
 backgroundColor="#FFFFFF"  
-secondaryBackgroundColor="#F0F2F6" 
+secondaryBackgroundColor="#bec8c3" 
 textColor="#31333F"         
 font="sans serif"
