--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor="#E37026"     
-backgroundColor="#FFFFFF"  
-secondaryBackgroundColor="#bec8c3" 
+backgroundColor="#bec8c3"  
+secondaryBackgroundColor="#FFFFFF" 
 textColor="#31333F"         
 font="sans serif"
