--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#E37026"
-backgroundColor = "#bec8c3"
-secondaryBackgroundColor = "#fefefe"
-textColor = "#000000ff"
+backgroundColor = "#0E1117"
+secondaryBackgroundColor = "#262730"
+textColor = "#FFFFFF"
 font = "sans serif"
