--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = "#E37026"
-backgroundColor = "#0E1117"
-secondaryBackgroundColor = "#262730"
+backgroundColor = "rgba(0, 0, 0, 1)"
+secondaryBackgroundColor = "rgba(14, 17, 23, 0.9)"
 textColor = "#FFFFFF"
 font = "sans serif"
